tests/NormalTests/paczka1/fuzzy1/80297624.err
Error in line 2: S928 A449 49,8
Error in line 4: 90U1 S10 13,4
Error in line 5: 90U1 S621 36,7
Error in line 14: 90U1 S10 41,6
Error in line 6: enRM S928 36,6
Error in line 23: S928 S621 92,9
Error in line 30: 0i7aLSPo S10 226,0
Error in line 34: IdkWOCPc S10 52,4
